--- a/crud_pedro/css/style.css
+++ b/crud_pedro/css/style.css
@@ -1,1 +1,62 @@
- 
+body {
+    background-color: #2c2c2c;
+    color: #f0f0f0;
+}
+
+.table {
+    background-color: #3a3a3a;
+    color: #fff;
+}
+
+.table thead {
+    background-color: #212121;
+    color: #f8f9fa;
+}
+
+.btn-primary {
+    background-color: #444;
+    border: none;
+}
+
+.btn-primary:hover {
+    background-color: #000;
+}
+
+.btn-warning {
+    background-color: #327cdd;
+    color: #fff;
+    border: none;
+}
+
+.btn-warning:hover {
+    background-color: #0348b1;
+}
+
+.btn-danger {
+    background-color: #dc3545;
+    border: none;
+}
+
+.btn-danger:hover {
+    background-color: #a71d2a;
+}
+
+.btn-secondary {
+    background-color: #555;
+    border: none;
+}
+
+.btn-secondary:hover {
+    background-color: #333;
+}
+
+select.form-select {
+    background-color: #444;
+    color: #fff;
+    border: none;
+}
+
+select.form-select:disabled {
+    background-color: #555;
+    color: #aaa;
+}
